--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-  </body>
+  <script type="text/javascript" src="/oni-duplicity/runtime~client.d3c5094ab294be84c788.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/vendors~client.d3c5094ab294be84c788.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/client.d3c5094ab294be84c788.bundle.js"></script></body>
 </html>
