--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
-<script type="text/javascript" src="/oni-duplicity/vnext/runtime~client.7765566ffaab3e1f8574.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/vnext/vendors~client.7765566ffaab3e1f8574.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/vnext/client.7765566ffaab3e1f8574.bundle.js"></script></body>
+<script type="text/javascript" src="/oni-duplicity/runtime~client.8951a3da08d81fdbf141.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/vendors~client.8951a3da08d81fdbf141.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/client.8951a3da08d81fdbf141.bundle.js"></script></body>
 
 </html>
