--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <title>Duplicity - Oxygen Not Included save file editor</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">
-  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-  <title>Duplicity - Oxygen Not Included save file editor</title>
-</head>
-
-<body>
-  <noscript>
-    You need to enable JavaScript to run this app.
-  </noscript>
-  <div id="root"></div>
-<script type="text/javascript" src="/oni-duplicity/runtime~client.8951a3da08d81fdbf141.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/vendors~client.8951a3da08d81fdbf141.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/client.8951a3da08d81fdbf141.bundle.js"></script></body>
-
+  <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div id="root"></div>
+  <script type="text/javascript" src="/oni-duplicity/runtime~client.e1c27bedbbb740af3835.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/vendors~client.e1c27bedbbb740af3835.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/client.e1c27bedbbb740af3835.bundle.js"></script></body>
 </html>
