--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     />
     <meta name="theme-color" content="#000000" />
     <title>Duplicity - Oxygen Not Included save file editor</title>
-  </head>
+  <link rel="manifest" href="/oni-duplicity/manifest.0735891dcec0f0cce5e826c1c2314c2a.json" /></head>
 
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-  <script type="text/javascript" src="/oni-duplicity/runtime~client.49c2f5cf4057b8fa68c9.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/vendors~client.49c2f5cf4057b8fa68c9.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/client.49c2f5cf4057b8fa68c9.bundle.js"></script></body>
+  <script type="text/javascript" src="/oni-duplicity/runtime~client.2af9757f1ec8b25c5b9a.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/npm.react-oni-duplicant.2af9757f1ec8b25c5b9a.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/npm.@material-ui.2af9757f1ec8b25c5b9a.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/client.2af9757f1ec8b25c5b9a.bundle.js"></script></body>
 </html>
