--- a/legacy-7.16/index.html
+++ b/legacy-7.16/index.html
@@ -8,12 +8,12 @@
     />
     <meta name="theme-color" content="#000000" />
     <title>Duplicity - Oxygen Not Included save file editor</title>
-  <link rel="manifest" href="/oni-duplicity/manifest.0735891dcec0f0cce5e826c1c2314c2a.json" /></head>
+  <link rel="manifest" href="/oni-duplicity/legacy-7.16/manifest.0735891dcec0f0cce5e826c1c2314c2a.json" /></head>
 
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-  <script type="text/javascript" src="/oni-duplicity/runtime~client.6c0af8f4b5416f67f711.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/npm.react-oni-duplicant.6c0af8f4b5416f67f711.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/npm.@material-ui.6c0af8f4b5416f67f711.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/client.6c0af8f4b5416f67f711.bundle.js"></script></body>
+  <script type="text/javascript" src="/oni-duplicity/legacy-7.16/runtime~client.ca607a368e8a51f5ba07.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/legacy-7.16/npm.react-oni-duplicant.ca607a368e8a51f5ba07.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/legacy-7.16/npm.@material-ui.ca607a368e8a51f5ba07.bundle.js"></script><script type="text/javascript" src="/oni-duplicity/legacy-7.16/client.ca607a368e8a51f5ba07.bundle.js"></script></body>
 </html>
